# Parallel_course_24

Task1/: .~lock.Tab1.ods#  CMakeLists.txt  Tab1.ods  a.out  main.cpp  main_MPI.cpp  main_MPI_2.cpp  main_MPI_4.cpp  main_MPI_OpenMP.cpp  main_OpenMP.cpp  main_Sequent.cpp  plot_analyticRes.py  plot_numRes.py  plot_numRes_4.py  plot_res.py  scleika.txt  scripts_lsf.txt
Task1/data/: param_10.txt  param_180_160.txt  param_20.txt  param_40.txt  param_90_80.txt  param_description.txt
Task1/include/: Point.hpp  coeff_calc.hpp  geom_calc.hpp  get_matrix.hpp  write_toFile.hpp
Task1/plots/: plot_numRes.py  plot_numRes_2.py  plot_numRes_4.py
Task1/results/: B.txt  a_coeff.txt  b_coeff.txt  grid.txt  res.txt  res_1mln_90_80.txt
Task1/results_MPI/: grid1.txt  res0.txt  res1.txt  res2.txt  res3.txt
Task1/results_MPI_2/: grid.txt  grid0.txt  grid1.txt  res0.txt  res1.txt
Task1/results_MPI_4/: grid0.txt  grid2.txt  res0.txt  res1.txt  res2.txt  res3.txt
Task1/results_MPI_OpenMP/: grid3.txt  res0.txt  res1.txt  res2.txt  res3.txt
Task1/src/: Point.cpp  coeff_calc.cpp  geom_calc.cpp  get_matrix.cpp  write_toFile.cpp
